--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+
+
+
 .App {
   text-align: center;
 }
@@ -25,7 +28,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #ac1dff;
 }
 
 @keyframes App-logo-spin {
